@@ -4,8 +4,9 @@
 #! Copyright (C) 2006 Yuichi Nakamura
 sysconfdir =/etc
 CONVERTER=/usr/bin/seedit-converter
-LOADPOLICY=/usr/sbin/load_policy
-CHECKPOLICY=/usr/bin/checkpolicy -M
+CHECKMODULE=/usr/bin/checkmodule
+SEMODULE_PACKAGE=/usr/bin/semodule_package
+SEMODULE=/usr/sbin/semodule
 FIXFILES=/sbin/fixfiles
 RESTORECON=/usr/sbin/seedit-restorecon
 SELINUXTYPE=seedit
@@ -20,11 +21,6 @@ INSTALL_PATH = $(POLICYROOT)
 SELINUXCONF=$(sysconfdir)/selinux/config
 
 M4=m4 -D enable_mcs
-DEFAULT_POLICYVER=20
-POLICYVER := $(shell $(CHECKPOLICY)  -V |cut -f 1 -d ' ')
-ifeq ($(POLICYVER),)
-POLICYVER=$(DEFAULT_POLICYVER)
-endif
 
 FILE_CONTEXTS=  $(CONTEXTSDIR)/files/file_contexts.m4
 OLD_FILE_CONTEXTS=  $(CONTEXTSDIR)/files/file_contexts.m4.old
@@ -39,10 +35,11 @@ policy:
 	$(M4)  -Imacros -s $(MACRODIR)/mcs_macros.te $(OUTDIR)/userhelper_context.m4 > $(OUTDIR)/userhelper_context.tmp;
 	grep system_u $(OUTDIR)/userhelper_context.tmp >  $(OUTDIR)/userhelper_context
 	rm $(OUTDIR)/userhelper_context.tmp
-	$(CHECKPOLICY) -o $(OUTDIR)/policy.$(POLICYVER) -c $(POLICYVER) $(OUTDIR)/policy.conf
-
+	$(CHECKMODULE) $(OUTDIR)/policy.conf -M -o $(OUTDIR)/base.mod
+	$(SEMODULE_PACKAGE)  -s $(BASEPOLICYDIR)/seusers -m $(OUTDIR)/base.mod -f $(OUTDIR)/file_contexts -o$(OUTDIR)/base.pp
+	
 install: policy
-	cp $(OUTDIR)/policy.$(POLICYVER) $(POLICYDIR)
+	cp $(OUTDIR)/base.pp $(POLICYDIR)
 	cp $(OUTDIR)/unconfined_domains $(POLICYDIR)
 	cp $(OUTDIR)/file_contexts $(CONTEXTSDIR)/files/
 	cp $(OUTDIR)/file_contexts.m4 $(CONTEXTSDIR)/files/
@@ -52,7 +49,7 @@ install: policy
 	echo "" > $(CONTEXTSDIR)/files/file_contexts.homedirs
 
 relabel: install
-	$(LOADPOLICY) $(POLICYDIR)/policy.$(POLICYVER)
+	$(SEMODULE) -b $(POLICYDIR)/base.pp
 	$(FIXFILES) -F restore
 	cp $(FILE_CONTEXTS) $(OLD_FILE_CONTEXTS)
 
@@ -68,7 +65,7 @@ diffrelabel: install
 		done; \
 		exec 3<&-;\
 	fi;
-	$(LOADPOLICY) $(POLICYDIR)/policy.$(POLICYVER)
+	$(SEMODULE) -b $(OUTDIR)/base.pp
 	diff $(OLD_FILE_CONTEXTS) $(FILE_CONTEXTS) -r |cat >  fcdiff.m4.tmp
 	$(M4)  -Imacros -s $(MACRODIR)/mcs_macros.te fcdiff.m4.tmp > fcdiff.pre.tmp
 	cat fcdiff.pre.tmp |grep -e "^[<>]"|sed -e 's/^[><][ \t]*//'|sed -e 's/[ \t]\+.*//'|sed -e 's/(.*//'|sort|sed s/"\[\^\/\]"//g > fcdiff.tmp
