@@ -1,3 +1,6 @@
+2006/10/21 Yuichi Nakamura
+Moved src/Makefile to seedit-converter
+
 2006/10/09 Yuichi Nakamura
 Modified to build base.pp 
 
